# plot_scc_optical_product

./: .gitignore  README.md  ancillary.py  elda.py  eldamwl.py  eldamwl_elda_plot.py  eldamwl_elda_plot.spec  eldamwl_elda_plot_cli.py  plotting.py  pyproject.toml
tests/elda/20250904pot192e/: pot_000_0355_0000694_202509041923_202509042019_20250904pot192e_elda_v5.3.0.nc  pot_000_0532_0000693_202509041923_202509042019_20250904pot192e_elda_v5.3.0.nc  pot_001_0355_0000696_202509041923_202509042019_20250904pot192e_elda_v5.3.0.nc  pot_001_0532_0000695_202509041923_202509042019_20250904pot192e_elda_v5.3.0.nc  pot_002_0355_0000698_202509041923_202509042019_20250904pot192e_elda_v5.3.0.nc  pot_002_0532_0000697_202509041923_202509042019_20250904pot192e_elda_v5.3.0.nc  pot_003_1064_0000692_202509041923_202509042019_20250904pot192e_elda_v5.3.0.nc  pot_007_0355_0000744_202509041923_202509042019_20250904pot192e_elda_v5.3.0.nc  pot_007_0532_0000743_202509041923_202509042019_20250904pot192e_elda_v5.3.0.nc  pot_008_1064_0000742_202509041923_202509042019_20250904pot192e_elda_v5.3.0.nc
tests/eldamwl/20250904pot192m/: pot_012_0000734_202509041923_202509042019_20250904pot192m_ELDAmwl_v0.2.0.nc
