[project]
name = "plot-scc-optical-product"
version = "0.1.0"
description = "Plot SCC optical Products (ELDA and ELDAmwl)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.9",
    "netcdf4>=1.7.4",
    "numpy>=2.4.4",
]
authors = [
    { name = "Giuseppe D'Amico", email = "giuseppe.damico@cnr.it" }
]

[tool.setuptools]
py-modules = [
    "eldamwl",
    "elda",
    "eldamwl_elda_plot",
    "eldamwl_elda_plot_cli",
]



[project.scripts]
eldamwl_elda_plot = "eldamwl_elda_plot_cli:main"

[tool.uv]
package = true

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
